# cripto-notification-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: releases.md
observability/alloy/: config.alloy
observability/grafana/dashboards/: api-dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/prometheus/: prometheus.yml
src/entrypoints/api/: app.py  exceptions.py  health.py  lifespan.py  main.py  middleware.py
src/shared/infra/core/: logger.py  settings.py
tests/: conftest.py
tests/integration/api/: conftest.py
tests/unit/shared/infra/core/: test_settings.py
