[project]
name = "ticker-price-system-prototype"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "dishka (>=1.10.1,<2.0.0)",
    "prometheus-fastapi-instrumentator (>=8.0.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "debugpy (>=1.8.21,<2.0.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
mypy_path = ["."]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
